--- a/pages/indexo/indexo.wxml
+++ b/pages/indexo/indexo.wxml
@@ -1,14 +1,12 @@
 <wxs module="filter" src="../../utils/getdatr.wxs">
 </wxs>
-<view class='top-pad'></view>
 <view class='topone'>
-  <!-- <view style='height:{{height4*2+20}}px' class='nav-wrap'> -->
 <view  class='nav-wrap2'>
     <view class='nav-title' style='line-height:{{height4*2 + 44}}px;'>海草日记</view>
   </view>
-  <view style='height:{{height4*2+30}}px;' class='pad'></view>
+  <!-- <view style='height:{{height4*2+30}}px;' class='pad'></view> -->
   
-  <view wx:if="{{inputShowed==false}}" style='top:{{height4*2 + 30}}px;' bindtap="showInput" class='nav'>
+  <!-- <view wx:if="{{inputShowed==false}}" style='top:{{height4*2 + 30}}px;' bindtap="showInput" class='nav'>
     <view style='color:black; position: absolute;margin-left: 65rpx;z-index:3;margin-top:35rpx;' class='iconfont icon-sousuokuang'></view>
     <view hover-class='none'>
       <input disabled="true" class="search" placeholder="搜索关键字" placeholder-class="search-p"></input>
@@ -22,11 +20,18 @@
     <view wx:if="{{inputVal==''}}" class="cancel2" bindtap="hideInput">取消</view>
     <view wx:if="{{inputVal!=''}}" class="cancel" bindtap="hideInput">取消</view>
     <view wx:if="{{inputVal!=''}}" class="cancel" bindtap="search">搜索</view>
+  </view> -->
+  <view style='margin-top:{{height4*2 + 44}}px;' class='r1 newV'>
+   <view style='position:absolute;font-size:50rpx;color:#9b9b9b;margin-top:15rpx;left:70rpx;' class='iconfont icon-sousuokuang'></view>
+   <input value="{{inputVal}}" bindinput="inputTyping" class='newInput'></input>
+   <view bindtap="search" class='newSearch ab'>搜索</view>
   </view>
-  <view style='top:{{height4*2 + 30+37}}px;' class='recom'>
+  
+  <!-- <view style='top:{{height4*2 + 30+37}}px;' class='recom'> -->
+  <view>
     <view class='recom2'>
       <scroll-view scroll-x="true" class='recommend'>
-        <view data-id='{{item.id}}' bindtap='change' class="f30 mt20 {{index == 0 ? '' : 'ml30'}} {{swiperIndex == index ? 'active' : 'c8a'}}" wx:for="{{titles}}" wx:key="{{item.id}}" data-idx='{{index}}' data-search="{{item.search}}" data-searchtwo="{{item.search2}}">
+        <view data-id='{{item.id}}' bindtap='change' class="f32 mt20 {{index == 0 ? '' : 'ml50'}} {{swiperIndex == index ? 'active' : 'c8a'}}" wx:for="{{titles}}" wx:key="{{item.id}}" data-idx='{{index}}' data-search="{{item.search}}" data-searchtwo="{{item.search2}}">
           {{item.name}}
         </view>
       </scroll-view>
@@ -36,4 +41,3 @@
 </view>
 
 <include src="kind.wxml" />
-<!-- </scroll-view> -->
