--- a/app.wxss
+++ b/app.wxss
@@ -7,6 +7,7 @@
 @import '/common/iconfont6.wxss';
 @import '/common/iconfont7.wxss';
 @import '/common/iconfont8.wxss';
+@import '/common/iconfont9.wxss';
 @import '/wxParser/index.wxss';
 /* {
         "pagePath": "pages/addNote/addNote",
@@ -56,6 +57,9 @@
 .c8c{
   color: #c8c8c8;
 }
+.cff{
+  color: #fff;
+}
 
 .ca2{
   color: #a2a2a2;
@@ -70,6 +74,15 @@
 .mt50{
   margin-top: 50rpx;
 }
+.bg{
+  background:linear-gradient(to right,#77d9dc, #58c2db);
+}
+.ml50{
+  margin-left: 50rpx;
+}
+.c1{
+  color: #1e1e1e;
+}
 ::-webkit-scrollbar{
 
   width: 0;
@@ -77,6 +90,9 @@
   height: 0;
 
   color: transparent;
+}
+.c9b{
+   color:#9b9b9b;
 }
 .mt5{
   margin-top: 5rpx;
@@ -222,6 +238,9 @@ margin-top:70rpx;
 .f26{
   font-size: 26rpx;
 }
+.mt6{
+  margin-top: 6rpx;
+}
 .pl30{
   padding-left: 30rpx;
 }
@@ -233,6 +252,14 @@ margin-top:70rpx;
   width: 100%;
   top: 0;
   background: #fff;
+  color: #000;
+  z-index: 997;
+}
+.mnav-wrap{
+  position: fixed;
+  width: 100%;
+  top: 0;
+  /* background: #fff; */
   color: #000;
   z-index: 997;
 }
