--- a/pages/indexo/indexo.wxss
+++ b/pages/indexo/indexo.wxss
@@ -1,41 +1,47 @@
 /* pages/indexo/indexo.wxss */
 @import '../member/member.wxss';
-.search{
-background-color:#f4f8fb;
-width:610rpx;
-height:75rpx;
-border-radius:30rpx;
-margin-left:40rpx;
-padding-left:60rpx;
-font-size:28rpx;
-margin-top: 15rpx;
+ page{
+ background-color: #f0f0f0;
 }
-.radius{
+.search {
+  background-color:#f4f8fb;
+  width: 610rpx;
+  height: 75rpx;
+  border-radius: 30rpx;
+  margin-left: 40rpx;
+  padding-left: 60rpx;
+  font-size: 28rpx;
+  margin-top: 15rpx;
+}
+
+.radius {
   border-radius: 10rpx;
 }
-.search2{
-background-color:#f4f8fb;
-width:470rpx;
-height:75rpx;
-border-radius:30rpx;
-margin-left:40rpx;
-padding-left:60rpx;
-font-size:28rpx;
-margin-top: 15rpx;
-}
-.cancel{
-  font-size: 30rpx;
-  margin-top:30rpx;
-margin-left:15rpx;
 
+.search2 {
+  background-color: #f4f8fb;
+  width: 470rpx;
+  height: 75rpx;
+  border-radius: 30rpx;
+  margin-left: 40rpx;
+  padding-left: 60rpx;
+  font-size: 28rpx;
+  margin-top: 15rpx;
 }
-.cancel2{
-  font-size: 30rpx;
-  margin-top:30rpx;
-  margin-left:50rpx;
 
+.cancel {
+  font-size: 30rpx;
+  margin-top: 30rpx;
+  margin-left: 15rpx;
 }
-.nav{
+
+.cancel2 {
+  font-size: 30rpx;
+  margin-top: 30rpx;
+  margin-left: 50rpx;
+}
+
+.nav {
   background-color: #fff;
   width: 100%;
   /* padding-bottom:20rpx; */
@@ -44,55 +50,62 @@ margin-left:15rpx;
   position: fixed;
   z-index: 999;
   /* top: 140rpx; */
-
 }
-.nav2{
+
+.nav2 {
   background-color: #fff;
   width: 100%;
-  padding-bottom:20rpx;
+  padding-bottom: 20rpx;
   display: flex;
   flex-direction: row;
   position: fixed;
   z-index: 999;
   top: 140rpx;
-
 }
-.top2{
+
+.top2 {
   position: fixed;
   background-color: #fff;
   width: 100%;
 }
-.search-p{
+
+.search-p {
   margin-left: 10rpx;
   font-size: 25rpx;
 }
-.search-icon{
+
+.search-icon {
   position: absolute;
   margin-left: 50rpx;
-  top:25rpx;
+  top: 25rpx;
 }
-.recom{
+
+.recom {
   position: fixed;
   z-index: 4;
   width: 100%;
   background-color: #fff;
   /* top:230rpx; */
 }
-.top-pad{
+
+.top-pad {
   position: fixed;
   background-color: #fff;
   z-index: 9;
   width: 100%;
-  top:0;
+  top: 0;
   height: 20px;
 }
-.recom2{
+
+.recom2 {
   /* position: fixed;
   z-index: 4; */
   width: 100%;
   background-color: #fff;
   padding-top: 10px;
+  height: 50px;
 }
+
 .nav-wrap2 {
   /* position: fixed; */
   width: 100%;
@@ -101,114 +114,163 @@ margin-left:15rpx;
   color: #000;
   z-index: 997;
 }
-.recommend{
-width:690rpx;
-height:100rpx;
-/* box-shadow: 1px 1px 25rpx #f5f5f5; */
-margin-left: 30rpx;
-margin-top:20rpx;
-background-color: #fff;
-overflow: hidden;
-white-space: nowrap;
-display: flex;
+
+.recommend {
+  width: 670rpx;
+  /* height: 100rpx; */
+  /* height: 50px; */
+  /* box-shadow: 1px 1px 25rpx #f5f5f5; */
+  margin-left: 40rpx;
+  /* margin-top: 10px; */
+  background-color: #fff;
+  overflow: hidden;
+  white-space: nowrap;
+  display: flex;
 }
-.recommend view{
+
+.recommend view {
   display: inline-block;
 }
-page{
-  background-color: #f4f8fb;
-  height: 100%;
-  width: 100%;
-}
-.active{
-  font-weight: bold;
+
+
+
+.active {
+  font-weight: bolder;
   color: black;
-  font-size:32rpx;
+  font-size: 34rpx;
+  border-bottom: 4rpx solid #000;
+  padding-bottom: 7rpx;
 }
-.img2{
+
+.img2 {
   width: 60rpx;
   height: 60rpx;
   border-radius: 50%;
-
 }
-.headimg{
- display:flex;
-flex-direction:row;
-padding-left:10rpx;
-background-color:#fff;
-width:335rpx;
-padding-bottom:10rpx;
-position:absolute;
-margin-top:-80rpx;
 
-
+.headimg {
+  display: flex;
+  flex-direction: row;
+  padding-left: 10rpx;
+  background-color: #fff;
+  width: 335rpx;
+  padding-bottom: 10rpx;
+  position: absolute;
+  margin-top: -80rpx;
 }
-.nick{
+
+.nick {
   font-size: 28rpx;
-  margin-top:10rpx;
-margin-left:10rpx;
-
+  margin-top: 10rpx;
+  margin-left: 10rpx;
 }
-.body{
-  width:100%;
 
-padding-bottom:40rpx;
-padding-top:230rpx;
+.body {
+  width: 100%;
+  padding-bottom: 40rpx;
+  padding-top: 230rpx;
+  background-color:#f0f0f0;
+}
 
+.numb {
+  position: absolute;
+  left: 260rpx;
+  margin-top: 13rpx;
+  font-size: 28rpx;
 }
-.numb{
-  position:absolute;left:260rpx;margin-top:13rpx;
-  font-size:28rpx;
-}
-.topone{
+
+.topone {
   background-color: #fff;
   /* height: 230rpx; */
   position: fixed;
   width: 100%;
   z-index: 2;
-  top:0rpx;
+  top: 0rpx;
 }
+
 ::-webkit-scrollbar {
-
   width: 0;
-
   height: 0;
-
   color: transparent;
-
 }
-.kinds{
+
+.kinds {
   display: flex;
   flex-direction: column;
-  width: 750rpx;
+  width: 670rpx;
   background-color: #fff;
-  margin-top:40rpx;
+  margin-top: 40rpx;
+  margin-left: 40rpx;
+  /* border-bottom-left-radius:20rpx;
+  border-bottom-right-radius:20rpx; */
+  border-radius: 20rpx;
 }
-.kinds-img{
+
+.kinds-img {
   width: 100%;
-  height: 750rpx;
+  height: 670rpx;
+  border-top-left-radius:20rpx;
+  border-top-right-radius:20rpx;
 }
-.kinds-title{
+
+.kinds-title {
   margin-top: 30rpx;
   height: 165rpx;
   line-height: 45rpx;
   font-size: 30rpx;
-  margin-left:30rpx;
-width:690rpx;
-
+  margin-left: 30rpx;
+  width: 640rpx;
 }
+
 .swiper {
   width: 100%;
+  border-top-left-radius:20rpx;
+  border-top-right-radius:20rpx;
 }
+
 .swiper-item {
   width: 100%;
   display: flex;
+  border-top-left-radius:20rpx;
+  border-top-right-radius:20rpx;
 }
-.video{
+
+.video {
   width: 690rpx;
   height: 517rpx;
 }
-.content-image{
+
+.content-image {
   width: 750rpx;
   height: 750rpx;
+}
+
+.newV {
+  width: 100%;
+  height: 50px;
+}
+
+.newInput {
+ border:1rpx solid #9b9b9b;
+width:380rpx;
+height:80rpx;
+border-bottom-left-radius:60rpx;
+border-top-left-radius:60rpx;
+margin-left:40rpx;
+padding-left:90rpx;
+}
+.newSearch{
+height:70rpx;
+width:150rpx;
+background-color:#000;
+border-bottom-right-radius:50rpx;
+border-top-right-radius:50rpx;
+color:#fff;
+position:absolute;
+right:39rpx;
+border:1rpx solid #000;
+font-size:39rpx;
+padding-left:50rpx;
+padding-top:11rpx;
+letter-spacing:10rpx;
 }
