--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -1,41 +1,44 @@
 <import src="../mine/mine2.wxml" />
 <wxs module="filter" src="../../utils/getdatr.wxs"></wxs>
-<view style='height:{{height4*2+20}}px' class='nav-wrap'>
-  <view class='nav-title' style='line-height:{{height4*2 + 44}}px;'>收藏</view>
+
+<view style='height:{{height4*2+20}}px' class='mnav-wrap bg'>
+  <view class='nav-title' style='line-height:{{height4*2 + 44}}px;color:#fff;'>收藏</view>
 </view>
-<view style='height:{{height4*2+30}}px;' class='pad'></view>
+<view style='height:{{height4*2+20}}px;' class='pad bg'></view>
+
 <view class='wait' wx:if="{{ishavecollect==true}}">
   <image mode='widthFix' src='../../images/loading.svg'></image>
   <view class='f28 ml38'>加载中</view>
 </view>
 <view wx:else>
-  <view class='head'>
+  <view style='top:{{height4*2 + 20}}px' class='mhead cff'>
     <view class='row1 ml20'>
       <view class="index-profile">
         <image mode='aspectFill' src='{{img2}}' class="index-profile__img"></image>
       </view>
       <view class='col ml20'>
-        <view class='nick2 bold'>{{userInfo.nick}}</view>
-        <view  class='age'>年龄：{{age}}</view>
-        <!-- <view class='age'>积分：{{integration}}</view> -->
+        <view class='cff f36 bold mt6 mnick'>{{userInfo.nick}}</view>
+        <view class='r1 mt20 f28'>
+          <view wx:if="{{userInfo.sex==1}}" style='color:#fff;' class='iconfont icon-nan'></view>
+          <view wx:if="{{userInfo.sex==2}}" style='color:#fff;' class='iconfont icon-nv'></view>
+          <view wx:if="{{userInfo.sex==null}}">
+            <view wx:if="{{userInfo.gender==1}}" style='color:blue;' class='iconfont icon-nan'></view>
+            <view wx:if="{{userInfo.gender==2}}" style='color:pink;' class='iconfont icon-nv'></view>
+          </view>
+          <view class='line'></view>
+          <view class='ml20 f30'>年龄：{{age}}</view>
+        </view>
       </view>
       <view bindtap='updata' class='edit'>
         <text class='edit-text'>编辑资料</text>
       </view>
     </view>
-    <view style='width:730rpx;' class='r1 mt20 f28 ml20'>
-      <view wx:if="{{userInfo.sex==1}}" style='color:blue;' class='iconfont icon-nan'></view>
-      <view wx:if="{{userInfo.sex==2}}" style='color:pink;' class='iconfont icon-nv'></view>
-      <view wx:if="{{userInfo.sex==null}}">
-        <view wx:if="{{userInfo.gender==1}}" style='color:blue;' class='iconfont icon-nan'></view>
-        <view wx:if="{{userInfo.gender==2}}" style='color:pink;' class='iconfont icon-nv'></view>
-      </view>
-      <view class='line'></view>
-      <view wx:if="{{userInfo.province!=null}}" class='introduce'>{{userInfo.province}}</view>
-      <view wx:if="{{userInfo.city!=null}}" class='introduce'>{{userInfo.city}}</view>
-    </view>
-    <text wx:if="{{sign!=null}}" class='sign'>{{sign}}</text>
-    <view class='border'></view>
+    <!-- <view wx:if="{{sign!=null}}">
+    <text wx:if="{{sign.length>36}}" class='sign f28'>{{filter.Limit3(sign,36)}}</text>
+    <text wx:else class='sign f28'>{{sign}}</text>
+    </view> -->
+    <!-- <view class='border'></view> -->
+
     <!-- <view class='register'>
       <view class='ruler f26'>打卡规则</view>
       <button wx:if="{{isregister==true}}" bindtap='makeRegister' class='register-btn mt20'>打卡</button>
@@ -49,24 +52,27 @@
     <!-- <view class='line2'></view> -->
   </view>
   <!-- 收藏 -->
-
-  <!-- <view class='isno' wx:if="{{isno==true}}">亲，你还没有添加任何收藏哦</view>
-  <view wx:if="{{isno==true}}" class='cen'>~w_w~ ... ...</view>
-  <view wx:else class="content">
-    <view class="left">
-      <view wx:if="{{index%2==0}}" wx:for="{{list2}}" wx:key="{{item.id}}">
-       <template is="mytemp" data="{{item}}"></template>
-      </view>
-      <view class='bottom'></view>
+  <view style='padding-top:154rpx'>
+    <view wx:if="{{isno==true}}">
+      <image mode='aspectFit' class='catimg' src='../../images/cat.jpg'></image>
     </view>
-    <view class="right">
-      <view wx:for="{{list2}}" data-index="{{index}}" wx:if="{{index%2==1}}" wx:key="{{item.id}}">
-        <template is="mytemp" data="{{item}}"></template>
+
+    <view wx:else class="content">
+      <view style='width:320rpx;' class="ml20 left">
+        <view wx:if="{{index%2==0}}" wx:for="{{list2}}" wx:key="{{item.id}}">
+          <template is="mytemp" data="{{item}}"></template>
+        </view>
+        <view class='bottom'></view>
       </view>
-      <view class='bottom'></view>
+      <view style='width:320rpx;margin-right:20rpx;' class="right">
+        <view wx:for="{{list2}}" data-index="{{index}}" wx:if="{{index%2==1}}" wx:key="{{item.id}}">
+          <template is="mytemp" data="{{item}}"></template>
+        </view>
+        <view class='bottom'></view>
+      </view>
     </view>
   </view>
-</view> -->
-
-  <include src="mine2.wxml" />
 </view>
+
+<!-- <include src="mine2.wxml" />
+</view> -->
