--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -6,7 +6,12 @@
 page {
   height: 100%;
   /* width: 750rpx; */
-  background-color: #f4f8fb;
+  background-color: #fff
+}
+.catimg{
+  width: 600rpx;
+  height: 850rpx;
+  margin-left: 145rpx;
 }
 
 .content {
@@ -28,8 +33,8 @@ page {
 .index-profile__img {
   display: block;
   border-radius: 50%;
-  width: 100rpx;
-  height: 100rpx;
+  width: 112rpx;
+  height: 112rpx;
   margin: 0 auto;
   background-repeat: no-repeat;
   background-size: contain;
@@ -47,9 +52,11 @@ page {
   justify-content: space-evenly;
 }
 
-.head {
-  /* width:750rpx; */
-  background-color: #fff;
+.mhead{
+  width:750rpx;
+ background:linear-gradient(to right,#77d9dc, #58c2db);
+ position: fixed;
+ height: 134rpx;
 }
 
 .edit {
@@ -59,10 +66,9 @@ page {
   border-radius: 30rpx;
   text-align: center;
   font-size: 30rpx;
-  margin-top: 40rpx;
+  margin-top: 10rpx;
   padding-top: 10rpx;
   /* margin-left:15rpx; */
-  background-color: #fff;
   position: absolute;
   left: 500rpx;
 }
@@ -81,10 +87,9 @@ page {
 
 .line {
   width: 1rpx;
-  height: 25rpx;
-  background-color: gray;
+  height: 32rpx;
+  background-color: #fff;
   margin-left: 20rpx;
-  margin-top: 8rpx;
 }
 
 .introduce {
@@ -138,9 +143,7 @@ page {
   margin-left: 45rpx;
 }
 
-.nick2 {
-  font-size: 30rpx;
-}
+
 
 .age {
   font-size: 30rpx;
@@ -148,11 +151,10 @@ page {
 }
 
 .sign {
-  margin-left: 20rpx;
+  margin-left: 172rpx;
   margin-top: 20rpx;
-  font-size: 28rpx;
   display: block;
-  width: 710rpx;
+  width: 500rpx;
 }
 
 .img2 {
@@ -228,5 +230,14 @@ border-radius:50%;
 animation:living 3s linear infinite;
 margin-top:-150rpx;
 animation-delay: 1.5s; /*第二个span动画延迟1.5秒*/
+}
+.mnick{
+  letter-spacing: 5rpx;
+}
+.mleft{
+  width: 320rpx;
+}
+.mright{
+  width: 320rpx;
 }
 
