--- a/pages/counselor/counselor.wxml
+++ b/pages/counselor/counselor.wxml
@@ -1,13 +1,10 @@
-<cover-view style='height:{{height4*2+20}}px' class='nav-wrap'>
-  <cover-view class='nav-title' style='line-height:{{height4*2 + 44}}px;'>咨询</cover-view>
-</cover-view>
-<view style='height:{{height4*2+20}}px;' class='pad'></view>
+<header title="咨询"></header>
   <view bindtap='goCounselors' class='cen mt100'>
     <image mode='aspectFill' class='pimg' src='../../images/adperson3.jpg'>
     </image>
-    <view class='permake b'>私人定制</view>
+    <view class='permake b le1'>私人定制</view>
   </view>
   <view bindtap='goConsolt' class='cen mt100'>
     <image mode='aspectFill' class='pimg' src='../../images/adperson2.jpg'></image>
-    <view class='permake b'>我要变美</view>
+    <view class='permake b le1'>我要变美</view>
   </view>
