--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -22,20 +22,20 @@
 </view>
 <view wx:else>
   <view class='contain2'>
-      <swiper wx:if="{{list.video==null}}" indicator-active-color="#58d1d3" indicator-dots="true" bindchange="change" style='height:{{height*750}}rpx;max-height:1000rpx;' circular='false' class="dswiper">
-        <swiper-item wx:for="{{list.img}}" wx:key="{{index}}" class="dswiper-item">
-          <image data-item="{{item}}" mode='widthFix' src="{{item}}" />
-        </swiper-item>
-      </swiper>
-    <video  class='video' id="myVideo" controls poster='{{list.img[0]}}' wx:else src='{{list.video}}'>
-    <!-- <cover-image wx:if="{{!play}}" class="img"  src="{{list.img[0]}}" /> -->
+    <swiper wx:if="{{list.video==null}}" indicator-active-color="#58d1d3" indicator-dots="true" bindchange="change" style='height:{{height*750}}rpx;max-height:1000rpx;' circular='false' class="dswiper">
+      <swiper-item wx:for="{{list.img}}" wx:key="{{index}}" class="dswiper-item">
+        <image data-item="{{item}}" mode='widthFix' src="{{item}}" />
+      </swiper-item>
+    </swiper>
+    <video class='video' id="myVideo" controls poster='{{list.img[0]}}' wx:else src='{{list.video}}'>
+      <!-- <cover-image wx:if="{{!play}}" class="img"  src="{{list.img[0]}}" /> -->
     </video>
     <!-- <view class='r1 mt30'>
       <image class='dhead' src='{{headimg}}'></image>
     </view> -->
     <canvas class='canvas' canvas-id='firstCanvas' style='width:{{w2/2}}px;height:{{h2/2}}px;position:fixed;top:-10000px;'></canvas>
     <!-- <button class='contact' open-type="contact" bindcontact="handleContact">咨询</button> -->
-   <button class='contact' bindtap="gochose">咨询</button>
+    <!-- <button class='contact' bindtap="gochose">咨询</button> -->
     <text class='content2'>
     {{list.content}}
   </text>
@@ -109,46 +109,25 @@
   </view>
 
   <view class='footer'>
-    <view style='margin-left:86rpx;' class='r1'>
-      <view wx:if="{{phone==null}}">
-        <button wx:if="{{list.collect==0}}" open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber" data-collect='{{list.collect}}' data-id="{{list.id}}" data-index="{{index}}" class='share2'>
-          <view data-id="{{list.id}}" style='color:#fff;font-size:50rpx;' class='iconfont icon-xin1'>
-            <span class="share-1">收藏</span>
-          </view>
-        </button>
-        <button wx:if="{{list.collect==1}}" data-collect='{{list.collect}}' data-id="{{list.id}}" data-index="{{index}}" bindtap='ifcollect' class='share2'>
-          <view data-id="{{list.id}}" style='color:red;font-size:50rpx;' class='iconfont icon-xin'>
-            <span class="share-1">收藏</span>
-          </view>
-        </button>
-      </view>
-      <view wx:if="{{phone!=null}}">
-        <button wx:if="{{list.collect==0}}" data-collect='{{list.collect}}' data-id="{{list.id}}" data-index="{{index}}" bindtap='ifcollect' class='share2'>
-          <view data-id="{{list.id}}" style='color:#fff;font-size:50rpx;' class='iconfont icon-xin1'>
-            <span class="share-1">收藏</span>
-          </view>
-          <!-- <view data-id="{{list.id}}" wx:if="{{list.collect==1}}" style='color:red;font-size:50rpx;' class='iconfont icon-xin'>
-          <span class="share-1">收藏</span>
-        </view> -->
-        </button>
-        <button wx:if="{{list.collect==1}}" data-collect='{{list.collect}}' data-id="{{list.id}}" data-index="{{index}}" bindtap='ifcollect' class='share2'>
-          <view data-id="{{list.id}}" style='color:red;font-size:50rpx;' class='iconfont icon-xin'>
-            <span class="share-1">收藏</span>
-          </view>
-        </button>
-      </view>
-      <view wx:if="{{list.collection>0}}" class='f32' style='color:#fff;position:relative;right:36rpx;top:10rpx;'>{{list.collection}}</view>
-    </view>
-    <view class='line'>
-    </view>
-    <view style='position:absolute;left:475rpx;' class='r1'>
-      <button bindtap='onShare' class='share'>
-        <view style='color:#1bad1a;font-size:50rpx;' class='iconfont icon-weixin'>
-          <span class="share-1" >分享</span>
-        </view>
+    <view wx:if="{{phone==null}}">
+      <button wx:if="{{list.collect==0}}" open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber" data-collect='{{list.collect}}' data-id="{{list.id}}" data-index="{{index}}" class='share2'>
+        <view>收藏</view>
       </button>
-      <!-- <view wx:if="{{share>0}}" class='f26' style='color:#fff;position:relative;right:36rpx;top:10rpx;'>{{share}}</view> -->
+      <button wx:if="{{list.collect==1}}" data-collect='{{list.collect}}' data-id="{{list.id}}" data-index="{{index}}" bindtap='ifcollect' class='share2'>
+        <view>已收藏</view>
+      </button>
     </view>
+    <view wx:if="{{phone!=null}}">
+      <button wx:if="{{list.collect==0}}" data-collect='{{list.collect}}' data-id="{{list.id}}" data-index="{{index}}" bindtap='ifcollect' class='share2'>
+        <view>收藏</view>
+      </button>
+      <button wx:if="{{list.collect==1}}" data-collect='{{list.collect}}' data-id="{{list.id}}" data-index="{{index}}" bindtap='ifcollect' class='share2'>
+        <view>已收藏</view>
+      </button>
+    </view>
+    <button bindtap='onShare' class='share'>
+      <view>分享</view>
+    </button>
   </view>
 </view>
 <view style='top:{{height4*2+20}}px' class='mask2' wx:if='{{isMakingPoster}}'>
