--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -29,8 +29,8 @@ page{
   position: fixed;
   bottom: 0rpx;
   width: 100%;
-  height: 80rpx;
-  background-color: #333;
+  height: 90rpx;
+  background-color: #fff;
   padding-top: 25rpx;
   display: flex;
   flex-direction: row;
@@ -126,23 +126,36 @@ line-height:50rpx;
 }
 
 .share {
-  background-color: #333;
-  line-height: 60rpx;
-  height: 60rpx;
-  width: 200rpx;
+  background-color:#000000;
+line-height:67rpx;
+height:70rpx;
+width:300rpx;
+border-radius:50rpx;
+color:#fff;
+font-size:36rpx;
+border:1rpx solid #000;
+font-weight:bold;
+letter-spacing:4rpx;
 }
-.share::after {
+/* .share::after {
   border: none;
-}
+} */
 .share2 {
-  background-color: #333;
-  line-height: 60rpx;
-  height: 60rpx;
-  width: 200rpx;
+ background-color:#fff;
+line-height:67rpx;
+height:70rpx;
+width:300rpx;
+border-radius:50rpx;
+color:#000000;
+font-size:36rpx;
+border:1rpx solid #000;
+font-weight:bold;
+letter-spacing:4rpx;
+margin-left: 50rpx;
 }
-.share2::after {
+/* .share2::after {
   border: none;
-}
+} */
 .share-1{
   font-size: 32rpx;
   color:#fff;
