--- a/pages/indexo/indexo.wxss
+++ b/pages/indexo/indexo.wxss
@@ -102,7 +102,7 @@
   z-index: 4; */
   width: 100%;
   background-color: #fff;
-  padding-top: 10px;
+  padding-bottom: 10px;
   height: 50px;
 }
 
@@ -117,29 +117,24 @@
 
 .recommend {
   width: 670rpx;
-  /* height: 100rpx; */
+  height: 100rpx;
   /* height: 50px; */
   /* box-shadow: 1px 1px 25rpx #f5f5f5; */
   margin-left: 40rpx;
   /* margin-top: 10px; */
   background-color: #fff;
-  overflow: hidden;
+  /* overflow: hidden; */
   white-space: nowrap;
   display: flex;
+  z-index: 999;
 }
-
-.recommend view {
-  display: inline-block;
-}
-
-
 
 .active {
   font-weight: bolder;
   color: black;
   font-size: 34rpx;
-  border-bottom: 4rpx solid #000;
-  padding-bottom: 7rpx;
+  /* border-bottom: 4rpx solid #000;
+  padding-bottom: 7rpx; */
 }
 
 .img2 {
@@ -219,7 +214,7 @@
   line-height: 45rpx;
   font-size: 30rpx;
   margin-left: 30rpx;
-  width: 640rpx;
+  width: 620rpx;
 }
 
 .swiper {
@@ -273,4 +268,25 @@ font-size:39rpx;
 padding-left:50rpx;
 padding-top:11rpx;
 letter-spacing:10rpx;
+}
+.cdc{
+  white-space: nowrap;
+}
+.lineT{
+ width:100%;
+height:6rpx;
+background-color:#000;
+margin-top:10rpx;
+border-radius:50rpx;
+
+}
+/*省略号*/
+.itext{
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  height:130rpx;
+overflow:hidden;
+text-overflow:ellipsis;
+width:620rpx;
+-webkit-line-clamp: 3;
 }
