--- a/pages/indexo/kind.wxml
+++ b/pages/indexo/kind.wxml
@@ -1,9 +1,9 @@
 <wxs module="filter" src="../../utils/getdatr.wxs"></wxs>
-<view style='padding-top:{{height4*2+44+110}}px;' class='wait' wx:if="{{list==''}}">
+<view style='padding-top:{{height4*2+44+95}}px;' class='wait' wx:if="{{list==''}}">
   <image mode='widthFix' src='../../images/loading.svg'></image>
   <view class='f28 ml38'>加载中</view>
 </view>
-<view wx:else style='padding-top:{{height4*2+44+110}}px;' class='body'>
+<view wx:else style='padding-top:{{height4*2+44+95}}px;' class='body'>
   <view bindtap='goDetail' data-id='{{item.id}}' wx:key="{{item.id}}" class='kinds' wx:for="{{list}}">
     <swiper wx:if="{{item.video==null}}" indicator-active-color="#58d1d3" indicator-dots="true" circular='false' class="kinds-img">
       <swiper-item wx:key="{{index}}" wx:for="{{item.img}}" class="kinds-img">
@@ -14,8 +14,10 @@
       </image>
     <view wx:if="{{item.video!=null}}" style='position:absolute;margin-top:248rpx;margin-left:315rpx;  font-size:60rpx;color:#fff;' class='iconfont icon-bofang'></view>
     <view class="kinds-title c9b">
-      <view wx:if="{{item.content.length>24}}">{{filter.Limit2(item.content)}}</view>
-      <view wx:else>{{item.content}}</view>
+      <!-- <view wx:if="{{item.content.length>52}}">{{filter.Limit3(item.content,59)}}</view>
+      <view wx:else>{{item.content}}</view> -->
+      <text class='itext' wx:if="{{item.content.length>52}}">{{item.content}}</text>
+      <text class='itext' wx:else>{{item.content}}</text>
     </view>
   </view>
 </view>
