--- a/pages/search/doctor.wxml
+++ b/pages/search/doctor.wxml
@@ -5,8 +5,8 @@
     </view>
     <view class='col hos-na f30'>
       <view class='r1'>
-        <view class='hos-name'>{{item.name}}</view>
-        <view class='cc5 b ml30 mt15'>{{item.job}}</view>
+        <view class='dhos-name'>{{item.name}}</view>
+        <view class='cc5 b ml30 mt6'>{{item.job}}</view>
       </view>
       <view class='cc5 b mt20'>{{item.hospital_name}}</view>
       <view class='b mt15'>案例：{{item.time}}</view>
