--- a/pages/test/test.wxml
+++ b/pages/test/test.wxml
@@ -1,2 +1,1 @@
-<header okEvent="点点点" id="header" bind:okEvent="call" title="海绵宝宝"></header>
-<view>{{aa}}</view>
+<header canGoIndex="true" my-class="red" bind:goIndex="goIndex" okEvent="点点点" id="header" bind:okEvent="call" title="海绵宝宝"></header>
