--- a/app.wxss
+++ b/app.wxss
@@ -8,6 +8,7 @@
 @import '/common/iconfont7.wxss';
 @import '/common/iconfont8.wxss';
 @import '/common/iconfont9.wxss';
+@import '/common/iconfont10.wxss';
 @import '/wxParser/index.wxss';
 /* {
         "pagePath": "pages/addNote/addNote",
@@ -29,6 +30,9 @@
 }
 .w710{
   width: 710rpx;
+}
+.ml35{
+  margin-left: 35rpx;
 }
 .w690{
   width: 690rpx;
@@ -89,11 +93,26 @@
 .ml40{
   margin-left: 40rpx;
 }
+.ml45{
+  margin-left: 45rpx;
+}
 .mt50{
   margin-top: 50rpx;
 }
+.mt70{
+  margin-top: 70rpx;
+}
 .bg{
   background:linear-gradient(to right,#77d9dc, #58c2db);
+}
+.cffb{
+  color:#ffb843;
+}
+.ced{
+  color:#edbc3b;
+}
+.ml15{
+  margin-left: 15rpx;
 }
 .ml50{
   margin-left: 50rpx;
@@ -111,6 +130,12 @@
 }
 .c9b{
    color:#9b9b9b;
+}
+.mt35{
+  margin-top: 35rpx;
+}
+.cfb{
+color: #fbb509;
 }
 .mt5{
   margin-top: 5rpx;
@@ -271,7 +296,7 @@ margin-top:70rpx;
   top: 0;
   background: #fff;
   color: #000;
-  z-index: 997;
+  z-index: 10;
 }
 .mnav-wrap{
   position: fixed;
@@ -279,7 +304,7 @@ margin-top:70rpx;
   top: 0;
   /* background: #fff; */
   color: #000;
-  z-index: 997;
+  z-index: 10;
 }
 .c62e{
   color:#62e3d2;
@@ -414,12 +439,16 @@ top:-2rpx;
   display: flex;
   flex-direction: row;
 }
-
+.cb6{
+  color: #b6b6b6;
+}
 .r1 {
   display: flex;
   flex-direction: row;
 }
-
+.mt8{
+  margin-top: 8rpx;
+}
 .r2 {
   display: flex;
   flex-direction: row;
@@ -481,6 +510,9 @@ top:-2rpx;
 
 .pt20 {
   padding-top: 20rpx;
+}
+.pt10 {
+  padding-top: 10rpx;
 }
 
 .pl20 {
